# prompt-evaluator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  chainlit.md  chainlit_en-US.md  pyproject.toml  run.py
.chainlit/: config.toml
.claude/: settings.json
.claude/commands/: dev.md  doc.md  lint.md  migrate.md  test.md
.claude/plans/: dreamy-purring-clock.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
alembic/versions/: 001_rename_langfuse_to_langsmith.py  002_change_embedding_dimension_to_768.py  003_add_thread_id_columns.py  004_add_document_tables.py
docker/: docker-compose.yml  init.sql
docs/: ARCHITECTURE.md
docs/diagrams/: architecture.eraser  component-diagram.eraser  data-flow.eraser  database.dbml  langgraph-workflow.eraser
public/: custom.css  custom.js  theme.json
src/: app.py
src/agent/: graph.py  state.py
src/agent/nodes/: analyzer.py  conversational.py  improver.py  meta_evaluator.py  optimized_runner.py  output_evaluator.py  output_runner.py  report_builder.py  router.py  scorer.py
src/config/: __init__.py  eval_config.py
src/config/defaults/: coding_task_eval_config.yaml  email_writing_eval_config.yaml  eval_config.yaml  exam_interview_eval_config.yaml  linkedin_post_eval_config.yaml  (+1 more)
src/db/: __init__.py  models.py  repository.py
src/documents/: __init__.py  chunker.py  exceptions.py  extractor.py  loader.py  models.py  processor.py  retriever.py  vectorizer.py
src/embeddings/: __init__.py  service.py
src/evaluator/: __init__.py  example_prompts.py  exceptions.py  llm_schemas.py  service.py  strategies.py
src/knowledge/: scoring_guide.md  tcrei_framework.md
src/prompts/: __init__.py  coding.py  email.py  exam.py  general.py  linkedin.py  registry.py  summarization.py
src/rag/: __init__.py  knowledge_store.py
src/ui/: __init__.py  audio_handler.py  chat_handler.py  evaluation_runner.py  profiles.py  results_display.py  thread_utils.py
src/utils/: chunking.py  custom_data_layer.py  example_formatter.py  langsmith_utils.py  llm_factory.py  local_storage.py  logging_config.py  report_generator.py  structured_output.py
tests/: conftest.py
tests/fixtures/: sample_prompts.py
tests/unit/: test_analyzer.py  test_app.py  test_chat_handler.py  test_chunking.py  test_coding_criteria.py  test_composite_improvement.py  test_config.py  test_conversational.py  test_cot_integration.py  test_criteria.py  test_criteria_registry.py  test_custom_data_layer.py  test_db_engine.py  test_db_models.py  test_document_chunker.py  test_document_exceptions.py  test_document_extractor.py  test_document_loader.py  test_document_models.py  test_document_processor.py  test_document_retriever.py  test_document_vectorizer.py  test_email_criteria.py  test_embedding_service.py  test_eval_config.py  test_eval_optimized_output.py  test_exam_criteria.py  test_example_formatter.py  test_example_prompts.py  test_exceptions.py  test_graph.py  test_improver.py  test_knowledge_store.py  test_langsmith_utils.py  test_linkedin_criteria.py  test_llm_factory.py  test_llm_schemas.py  test_local_storage.py  test_logging_config.py  test_meta_evaluator.py  (+17 more)
(+13 files in other folders)
